@@ -1,7 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-    id 'org.beryx.runtime' version '1.13.1'
+    id 'org.beryx.runtime' version '1.13.0'
 }
 
 repositories {
@@ -32,10 +32,7 @@ application {
 }
 
 runtime {
-    options = [
-        '--module-path', "${projectDir}/jmods",
-        '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
+    modules = ['javafx.controls', 'javafx.fxml']
 
     jpackage {
         imageName = 'EstimasiKeuntungan'
